TestRepo2/src/objects/Folder__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Add_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Add Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_File_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow File Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Distributor_Names__c</fullName>
        <label>Distributors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distributors__c</fullName>
        <label>Distributor IDs</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Filter_By_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter By Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_By_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter By Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layout_Type__c</fullName>
        <label>Layout Type</label>
        <picklist>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar With Columns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Only_For_Internal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only For Internal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgUnitsNames__c</fullName>
        <label>Organizational Units</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgUnits__c</fullName>
        <label>OrgUnit Id</label>
        <picklist>
            <picklistValues>
                <fullName>OrgUnits</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Page_Section__c</fullName>
        <label>Page Section</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Folder</label>
        <referenceTo>Folder__c</referenceTo>
        <relationshipLabel>Folders</relationshipLabel>
        <relationshipName>Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_header__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is header</label>
        <type>Checkbox</type>
    </fields>
    <label>Folder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Page_Section__c</columns>
        <columns>Parent_Folder__c</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Layout_Type__c</columns>
        <columns>Division__c</columns>
        <columns>Filter_By_Brand__c</columns>
        <columns>Filter_By_Time__c</columns>
        <columns>Allow_Add_Comment__c</columns>
        <columns>Allow_File_Upload__c</columns>
        <columns>Only_For_Internal_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Page_Section__c</columns>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Parent_Folder__c</columns>
        <columns>Order__c</columns>
        <columns>Allow_Add_Comment__c</columns>
        <columns>Allow_File_Upload__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Collaboration</fullName>
        <columns>Page_Section__c</columns>
        <columns>Parent_Folder__c</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Layout_Type__c</columns>
        <columns>OrgUnitsNames__c</columns>
        <columns>Distributor_Names__c</columns>
        <columns>Filter_By_Brand__c</columns>
        <columns>Filter_By_Time__c</columns>
        <columns>Allow_Add_Comment__c</columns>
        <columns>Allow_File_Upload__c</columns>
        <columns>Only_For_Internal_User__c</columns>
        <columns>Classification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Page_Section__c</field>
            <operation>equals</operation>
            <value>Collaboration</value>
        </filters>
        <label>All-Collaboration</label>
    </listViews>
    <listViews>
        <fullName>All_Performance_Management</fullName>
        <columns>Page_Section__c</columns>
        <columns>Parent_Folder__c</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Layout_Type__c</columns>
        <columns>Division__c</columns>
        <columns>Filter_By_Brand__c</columns>
        <columns>Filter_By_Time__c</columns>
        <columns>Allow_Add_Comment__c</columns>
        <columns>Allow_File_Upload__c</columns>
        <columns>Only_For_Internal_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Page_Section__c</field>
            <operation>equals</operation>
            <value>Performance Management</value>
        </filters>
        <label>All-Performance-Management</label>
    </listViews>
    <listViews>
        <fullName>All_Planning</fullName>
        <columns>Page_Section__c</columns>
        <columns>Classification__c</columns>
        <columns>Parent_Folder__c</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Layout_Type__c</columns>
        <columns>Division__c</columns>
        <columns>Filter_By_Brand__c</columns>
        <columns>Filter_By_Time__c</columns>
        <columns>Only_For_Internal_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Page_Section__c</field>
            <operation>equals</operation>
            <value>Planning</value>
        </filters>
        <label>All-Planning</label>
    </listViews>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IK0000000CpfvMAC_00NK0000000UTFzMAO</fullName>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <field>Calendar__c.Folder__c</field>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Planning</value>
        </filterItems>
        <filterItems>
            <field>Folder__c.Page_Section__c</field>
            <operation>equals</operation>
            <value>Planning</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Multicultural</value>
        </filterItems>
        <filterItems>
            <field>Folder__c.Page_Section__c</field>
            <operation>equals</operation>
            <value>Multicultural</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Calendar_Folder</name>
        <sourceObject>Calendar__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IK0000000CrHOMA0_00NK0000000UCkqMAG</fullName>
        <active>true</active>
        <field>Folder__c.Parent_Folder__c</field>
        <filterItems>
            <field>$Source.Page_Section__c</field>
            <operation>equals</operation>
            <valueField>Folder__c.Page_Section__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Folder__c.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Folder_Parent Folder</name>
        <sourceObject>Folder__c</sourceObject>
    </namedFilters>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Collaboration_Section_Availability</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Page_Section__c ,  &apos;Collaboration&apos;))  &amp;&amp; ($UserRole.Name &lt;&gt; $Setup.CollaborationSectionRole__c.RoleName__c)</errorConditionFormula>
        <errorDisplayField>Page_Section__c</errorDisplayField>
        <errorMessage>You cannot add folders to Collaboration section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_allowed_only_for_Collaboration</fullName>
        <active>true</active>
        <description>Allow set comment flag only for folders which are displayed on the Collaboration page</description>
        <errorConditionFormula>AND(
    !ISPICKVAL(Page_Section__c, &apos;Collaboration&apos;),
     Allow_Add_Comment__c 
)</errorConditionFormula>
        <errorMessage>Adding comments can be enabled only for folder in a Collaboration section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Filter_allowed_only_for_Planing</fullName>
        <active>true</active>
        <description>Allow set filter flag only for folders which are displayed on the Planing page</description>
        <errorConditionFormula>AND(
    !ISPICKVAL(Page_Section__c, &apos;Planning&apos;),
    OR(
        Filter_By_Brand__c,
        Filter_By_Time__c 
    )
)</errorConditionFormula>
        <errorMessage>Filtering by time or brand can be enabled only for folder in a Planing section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrganizationUnitsRequired</fullName>
        <active>true</active>
        <description>Organization Units should be not null if page section is Performance Management or Collaboration</description>
        <errorConditionFormula>( ISPICKVAL( Page_Section__c , &apos;Collaboration&apos;)  ||  ISPICKVAL( Page_Section__c , &apos;Performance Management&apos;) ) &amp;&amp; ISNULL( OrgUnits__c )</errorConditionFormula>
        <errorDisplayField>Division__c</errorDisplayField>
        <errorMessage>One or more Organization Unit should be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Uploading_allowed_only_for_Collaboration</fullName>
        <active>true</active>
        <description>Allow set upload flag only for folders which are displayed on the Collaboration page</description>
        <errorConditionFormula>AND(
    !ISPICKVAL(Page_Section__c, &apos;Collaboration&apos;),
      Allow_File_Upload__c  
)</errorConditionFormula>
        <errorMessage>Uploading files can be enabled only for folder in a Collaboration section</errorMessage>
    </validationRules>
</CustomObject>